<resources>
    <string name="app_name">NetEase News</string>
    <string name="app_name_nightly">NetEase News</string>
    <string name="channel_id">360_news</string>
    <string name="ns_appkey">2x1kfBk63z</string>
    <string name="version_build_num">Build 286</string>
    <string name="version_build_num_str">Build %s</string>
    <string name="versionnum">V3.7.0</string>
    <string name="copyright">Copyright © 2013 NetEase Inc. All Rights Reserved</string>
    <string name="biz_ad_flowremind_tipcontent">Welcome to NetEase News client software, the client to use a completely free, the discharge fee, traffic fee please consult the local operator, whether to allow to establish a connection?</string>
    <string name="biz_ad_flowremind_ok">OK</string>
    <string name="biz_ad_flowremind_exit">Exit</string>
    <string name="biz_ad_flowremind_noask">No ask</string>
    <string name="biz_ad_flowremind_title">The system prompts</string>
    <string name="application_name_CHN">网易新闻</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="net_err">网络不给力</string>
    <string name="post">提交</string>
    <string name="post_success">已提交!</string>
    <string name="post_failed">提交失败!</string>
    <string name="wait">请稍侯…</string>
    <string name="empty">暂无数据…</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="before_yesterday">前天</string>
    <string name="mm_dd">MM月dd日</string>
    <string name="hour_ago">%d小时前</string>
    <string name="min_ago">%d分钟前</string>
    <string name="one_min_ago">1分钟前</string>
    <string name="subfix_update">%s更新</string>
    <string name="exit_tips">再按一次退出网易新闻</string>
    <string name="offline_title">离线较消耗较多流量</string>
    <string name="offline_tips">当前为3G/2G网络，确定要继续离线吗？</string>
    <string name="offline_cancel">算了</string>
    <string name="offline_goon">好的，继续</string>
    <string name="biz_navi_news">新闻</string>
    <string name="biz_navi_read">订阅</string>
    <string name="biz_navi_local_news">本地</string>
    <string name="biz_navi_pics">图片</string>
    <string name="biz_navi_ugc">话题</string>
    <string name="biz_navi_ties">跟贴</string>
    <string name="biz_navi_vote">投票</string>
    <string name="biz_navi_micro">微生活</string>
    <string name="biz_navi_polymeric">聚合阅读</string>
    <string name="biz_navi_news_en">NEWS</string>
    <string name="biz_navi_read_en">READING</string>
    <string name="biz_navi_local_news_en">LOCAL</string>
    <string name="biz_navi_pics_en">PHOTO</string>
    <string name="biz_navi_ugc_en">TOPIC</string>
    <string name="biz_navi_ties_en">COMMENT</string>
    <string name="biz_navi_vote_en">VOTE</string>
    <string name="biz_navi_micro_en">MICRO</string>
    <string name="biz_navi_polymeric_en">FOCUS</string>
    <string name="base_pull_list_pull">下拉可以刷新</string>
    <string name="base_pull_list_release">松开可以刷新</string>
    <string name="base_pull_list_refreshing">正在刷新…</string>
    <string name="base_load_err">加载失败</string>
    <string name="base_loading">正在加载…</string>
    <string name="base_load_more">显示下%d条</string>
    <string name="base_loading_more">%d条载入中…</string>
    <string name="base_loading_more_net_err_retry">网络错误,点击重试</string>
    <string name="base_load_err_retry">加载失败,点击重试</string>
    <string name="biz_ad_update">立即升级</string>
    <string name="biz_ad_install">立即安装</string>
    <string name="biz_ad_no_tip">不再提示</string>
    <string name="biz_ad_start">开启有声新闻</string>
    <string name="biz_ad_share">分享到微博</string>
    <string name="biz_ad_new_version_share">在路上，做一个有态度的聆听者。@网易新闻客户端 Android V3.7.0版升级，开启有声新闻的时代。 http://m.163.com/newsapp</string>
    <string name="biz_version_update_title">升级网易新闻客户端</string>
    <string name="biz_version_update_do">立刻升级</string>
    <string name="biz_version_update_cancel">暂不升级</string>
    <string name="biz_sns_err_msg_rebind">请重新绑定帐号</string>
    <string name="biz_sns_err_msg_same_cotent">分享的内容与上次重复</string>
    <string name="biz_sns_err_msg_type_null">分享类型错误</string>
    <string name="biz_sns_err_msg_bind_retry">绑定失败，请重试</string>
    <string name="biz_sns_err_msg_bind_netease_not_weibo">绑定失败，帐号未开通网易微博！</string>
    <string name="biz_sns_err_msg_bind_sina_refused">绑定失败，新浪微博授权被拒绝！</string>
    <string name="biz_sns_err_msg_bind_page">加载页面失败,请重试</string>
    <string name="biz_sns_success_msg_bind">绑定成功</string>
    <string name="biz_sns_success_msg_unbind">解除绑定成功</string>
    <string name="biz_sns_type_name_netease">网易微博</string>
    <string name="biz_sns_type_name_sina">新浪微博</string>
    <string name="biz_sns_type_name_qq">腾讯微博</string>
    <string name="biz_sns_type_name_renren">人人网</string>
    <string name="biz_sns_type_name_ydnote">有道云笔记</string>
    <string name="biz_sns_type_name_weixin">微信</string>
    <string name="biz_sns_type_name_weixin_timeline">微信朋友圈</string>
    <string name="biz_sns_type_name_yixinxin_timeline">易信朋友圈</string>
    <string name="biz_sns_type_name_qqfriends">QQ好友</string>
    <string name="biz_sns_type_name_yiliao">翼聊</string>
    <string name="biz_sns_type_name_qzone">QQ空间</string>
    <string name="biz_sns_type_name_email">邮箱</string>
    <string name="biz_sns_type_name_sms">短信</string>
    <string name="biz_sns_type_name_yixin">易信</string>
    <string name="biz_sns_bind_to">绑定%s</string>
    <string name="biz_sns_share_to">分享到</string>
    <string name="biz_sns_publish_to">分享到%s</string>
    <string name="biz_sns_publish_limit">还可输入 %s 字</string>
    <string name="biz_sns_publish_overflow">已超出 %s 字</string>
    <string name="biz_sns_share_sms_text">我在网易新闻手机客户端，发现了文章</string>
    <string name="biz_sns_share_sms_pictext">我在网易新闻手机客户端，发现了图集</string>
    <string name="biz_sns_share_sms_tietext">我在网易新闻手机客户端，发现了跟贴</string>
    <string name="biz_sns_share_sms_pic_address">图集地址:</string>
    <string name="biz_sns_share_sms_pic_txt">网易新闻客户端-图片分享</string>
    <string name="biz_sns_share_url_wap">手机访问:</string>
    <string name="biz_sns_share_url_www">电脑访问:</string>
    <string name="biz_sns_share_with_u">，与你分享</string>
    <string name="biz_sns_share_email_title">网易新闻分享</string>
    <string name="biz_sns_share_email_pictitle">网易图集分享</string>
    <string name="biz_sns_share_email_tietitle">网易跟贴分享</string>
    <string name="biz_sns_select_email_client">请选择Email客户端软件:</string>
    <string name="biz_sns_share_sns_text">分享网易新闻:</string>
    <string name="biz_sns_share_sns_pictext">分享网易图集</string>
    <string name="biz_sns_share_sns_tietext">分享网易跟贴</string>
    <string name="biz_sns_share_sns_micro">分享网易微新闻</string>
    <string name="biz_sns_share_published">已发送</string>
    <string name="biz_sns_share_email_text">我在网易新闻手机客户端，发现了这篇文章，想与你分享：</string>
    <string name="biz_sns_share_wx_noclient">抱歉，您未安装微信客户端，无法进行微信分享</string>
    <string name="biz_sns_share_yl_noclient">抱歉，您未安装翼聊客户端，无法进行翼聊分享</string>
    <string name="biz_sns_share_wx_nosupport_timeline">抱歉，仅微信4.2以上版本支持分享到朋友圈</string>
    <string name="biz_sns_manager_bind">绑定</string>
    <string name="biz_sns_manager_unbind">取消绑定</string>
    <string name="biz_sns_publis_hint">请说点儿什么吧...</string>
    <string name="biz_sns_err_msg_textoverflow">字数已超出</string>
    <string name="biz_sns_share_from">来自网易新闻客户端</string>
    <string name="biz_sns_share_tie_floor">[网易跟贴楼层]</string>
    <string name="biz_sns_share_tie_url_title">跟贴地址：</string>
    <string name="biz_sns_share_tie_img_title">跟贴楼层截图：</string>
    <string name="biz_update_start">新版本已经开始更新</string>
    <string name="biz_update_download_complete">下载完成</string>
    <string name="biz_update_download_complete_install">下载已完成,点击进行安装</string>
    <string name="biz_update_in_download_list">已经添加到下载列表</string>
    <string name="biz_update_download_error">抱歉，下载错误</string>
    <string name="biz_update_notice_tips">点击升级为最新:V%s版</string>
    <string name="biz_setting_title">设置</string>
    <string name="biz_setting_category_mainpage">正文</string>
    <string name="biz_setting_fullscreen">新闻正文页单击全屏</string>
    <string name="biz_setting_fullscreen_title">正文单击全屏</string>
    <string name="biz_setting_news_textsize_dlg_title">正文字体</string>
    <string name="biz_setting_category_flowcontrol">流量控制</string>
    <string name="biz_setting_flowcontrol_autodownload">离线后不需要网络也可以看新闻</string>
    <string name="biz_setting_flowcontrol_autodownload_title">WLAN时自动离线</string>
    <string name="biz_setting_flowcontrol_download_picture">在非WLAN下帮您节省流量</string>
    <string name="biz_setting_flowcontrol_download_picture_title">3G/2G网络为无图模式</string>
    <string name="biz_setting_flowcontrol_clearcache">清除缓存的临时文件</string>
    <string name="biz_setting_flowcontrol_clearcache_title">清除缓存</string>
    <string name="biz_setting_flowcontrol_cache_size">当前缓存大小</string>
    <string name="biz_setting_flowcontrol_max_size_msg">大于100M</string>
    <string name="biz_setting_category_push">推送</string>
    <string name="biz_setting_push">是否自动推送</string>
    <string name="biz_setting_push_title">自动推送</string>
    <string name="biz_setting_category_account">帐号设置</string>
    <string name="biz_setting_account_my">我的帐号</string>
    <string name="biz_setting_account_other">绑定其他平台</string>
    <string name="biz_setting_category_application">系统设置</string>
    <string name="biz_setting_application_text_size">正文字号</string>
    <string name="biz_setting_application_push">要闻推送</string>
    <string name="biz_setting_application_offline">Wi-Fi下自动离线</string>
    <string name="biz_setting_application_no_picture">2G/3G网络不下载图片</string>
    <string name="biz_setting_application_scroll_load">列表自动加载更多</string>
    <string name="biz_setting_application_polymeric">聚合阅读</string>
    <string name="biz_setting_application_clear_cache_manually">手动清理缓存</string>
    <string name="biz_setting_category_plugin">插件管理</string>
    <string name="biz_setting_other_settings">其他设置</string>
    <string name="biz_setting_other_fresh_guide">新手引导</string>
    <string name="biz_setting_other_about">关于</string>
    <string name="biz_setting_other_feedback">意见反馈</string>
    <string name="biz_setting_no_account">未登录网易通行证</string>
    <string name="biz_setting_sign_in">登录</string>
    <string name="biz_setting_sign_out">注销</string>
    <string name="biz_setting_sign_up">注册</string>
    <string name="biz_setting_login_description">登录后就可以发表，回复跟贴了</string>
    <string name="biz_setting_other_platform">其他平台</string>
    <string name="biz_tie_comment_tool_support">%d顶</string>
    <string name="biz_tie_comment_tool_reply">回复</string>
    <string name="biz_tie_comment_tool_share">分享</string>
    <string name="biz_tie_comment_tool_collect">收藏</string>
    <string name="biz_tie_comment_tool_cancel_collect">取消收藏</string>
    <string name="biz_tie_comment_tool_copy">复制</string>
    <string name="biz_tie_comment_tool_go_orig">查看原文</string>
    <string name="biz_pc_score_progaganda_title">执行网易老带新计划，邀请新用户共享好新闻</string>
    <string name="biz_pc_score_progaganda_desc">新用户：从未安装使用新闻客户端的朋友</string>
    <string name="biz_pc_score_progaganda_gold_title">金币奖励：+300金币（每成功邀请1位）</string>
    <string name="biz_pc_score_progaganda_max_gold_title">最多赠送：6000金币</string>
    <string name="biz_pc_score_progaganda_how_title">怎么做：</string>
    <string name="biz_pc_score_progaganda_how_step1_title">邀请新用户安装网易新闻</string>
    <string name="biz_pc_score_progaganda_how_step1_method1_title">方法一：亲自为他安装</string>
    <string name="biz_pc_score_progaganda_how_step1_method2_title">方法二：</string>
    <string name="biz_pc_score_progaganda_how_step1_method2_share_title">分享网易老带新计划</string>
    <string name="biz_pc_score_progaganda_how_step1_msg">新用户安装并提交您的通行证账号</string>
    <string name="biz_pc_score_progaganda_how_step2_title">你作为老用户获得300金币，你的朋友作为新用户获得200金币！</string>
    <string name="biz_pc_score_progaganda_result_title">成功邀请：%s个用户</string>
    <string name="feedback_edittext_hint">请输入反馈，我们将为您不断改进</string>
    <string name="feedback_email_hint">选填，便于我们给您反馈</string>
    <string name="feedback_email_title">您的邮箱:</string>
    <string name="feedback_button_text">"提     交"</string>
</resources>