<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:scrollbarThumbVertical="@drawable/biz_pic_scrollbar_handle" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center|top" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:id="@id/container1" android:background="@drawable/biz_pc_score_bg_1" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.netease.nr.base.view.MyTextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/biz_pc_score_detail_title" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="15.0dip" android:text="@string/biz_pc_score_progaganda_title" />
                <com.netease.nr.base.view.MyTextView android:textSize="14.0sp" android:textColor="@color/biz_pc_score_title_level_info_color" android:id="@id/desc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/biz_pc_score_progaganda_desc" />
                <com.netease.nr.base.view.MyTextView android:textSize="15.0sp" android:textColor="@color/biz_pc_score_detail_title" android:id="@id/gold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="15.0dip" android:text="@string/biz_pc_score_progaganda_gold_title" />
                <com.netease.nr.base.view.MyTextView android:textSize="15.0sp" android:textColor="@color/biz_pc_score_detail_title" android:id="@id/max_gold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="15.0dip" android:layout_marginBottom="15.0dip" android:text="@string/biz_pc_score_progaganda_max_gold_title" />
                <ImageView android:id="@id/business_line1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/biz_pc_account_score_line" android:scaleType="fitXY" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/container2" android:background="@drawable/biz_pc_score_bg_2" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.netease.nr.base.view.MyTextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/biz_pc_score_detail_title" android:id="@id/how_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="15.0dip" android:text="@string/biz_pc_score_progaganda_how_title" />
                <RelativeLayout android:id="@id/step1" android:background="@drawable/biz_pc_score_propaganda_how_step1_bg" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip">
                    <com.netease.nr.base.view.MyTextView android:textSize="15.0sp" android:textColor="@color/biz_pc_score_detail_title" android:id="@id/step1_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="-2.0dip" android:text="@string/biz_pc_score_progaganda_how_step1_title" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
                    <com.netease.nr.base.view.MyTextView android:textSize="15.0sp" android:textColor="@color/biz_pc_score_detail_title" android:id="@id/step1_method1_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/biz_pc_score_progaganda_how_step1_method1_title" android:layout_below="@id/step1_title" android:layout_alignParentLeft="true" />
                    <com.netease.nr.base.view.MyTextView android:textSize="15.0sp" android:textColor="@color/biz_pc_score_detail_title" android:id="@id/step1_method2_title" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/biz_pc_score_progaganda_how_step1_method2_title" android:layout_below="@id/step1_method1_title" android:layout_alignParentLeft="true" />
                    <com.netease.nr.base.view.MyButton android:textSize="15.0sp" android:id="@id/step1_method2_share" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/biz_pc_score_progaganda_how_step1_method2_share_title" android:singleLine="true" android:layout_toRightOf="@id/step1_method2_title" android:layout_below="@id/step1_method1_title" />
                </RelativeLayout>
                <com.netease.nr.base.view.MyTextView android:textSize="15.0sp" android:textColor="@color/biz_pc_score_detail_important_msg" android:gravity="center|left" android:id="@id/step1_msg" android:background="@drawable/biz_pc_score_progaganda_how_step1_msg_bg" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/biz_pc_score_progaganda_how_step1_msg" />
                <com.netease.nr.base.view.MyTextView android:textSize="15.0sp" android:textColor="@color/biz_pc_score_detail_title" android:id="@id/step2_title" android:background="@drawable/biz_pc_score_propaganda_how_step2_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/biz_pc_score_progaganda_how_step2_title" />
                <com.netease.nr.base.view.MyTextView android:textSize="15.0sp" android:textColor="@color/biz_pc_score_detail_title" android:gravity="center|left" android:id="@id/result_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/biz_pc_score_progaganda_result_title" />
                <LinearLayout android:orientation="vertical" android:id="@id/user_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="35.0dip" android:layout_marginRight="15.0dip" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>