<?xml version="1.0" encoding="utf-8"?>
<com.netease.nr.base.view.DividerLinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/tools_container" android:background="@drawable/biz_tie_comment_toolbar_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="@dimen/biz_tie_comment_toolbar_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.netease.nr.base.view.MyTextView android:textAppearance="@style/biz_tie_comment_toolbar_style" android:gravity="center" android:id="@id/share" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/biz_tie_comment_toolbar_item_width" android:text="@string/biz_tie_comment_tool_share" android:drawableTop="@drawable/biz_tie_comment_tool_share" />
    <com.netease.nr.base.view.MyTextView android:textAppearance="@style/biz_tie_comment_toolbar_style" android:gravity="center" android:id="@id/reply" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/biz_tie_comment_toolbar_item_width" android:text="@string/biz_tie_comment_tool_reply" android:drawableTop="@drawable/biz_tie_comment_tool_reply" />
    <com.netease.nr.base.view.MyTextView android:textAppearance="@style/biz_tie_comment_toolbar_style" android:gravity="center" android:id="@id/copy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/biz_tie_comment_toolbar_item_width" android:text="@string/biz_tie_comment_tool_copy" android:drawableTop="@drawable/biz_tie_comment_tool_copy" />
    <com.netease.nr.base.view.MyTextView android:textAppearance="@style/biz_tie_comment_toolbar_style" android:gravity="center" android:id="@id/goOrig" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/biz_tie_comment_toolbar_item_width" android:text="@string/biz_tie_comment_tool_go_orig" android:drawableTop="@drawable/biz_tie_comment_tool_orig" />
</com.netease.nr.base.view.DividerLinearLayout>