<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/whole_space" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/topbar_layout" layout="@layout/base_action_bar_layout" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/accounttext_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
        <com.netease.nr.base.view.MyEditText android:scrollbarThumbVertical="@drawable/base_list_scrollbar_handle" android:scrollbarStyle="outsideOverlay" android:textSize="16.0sp" android:textColorHint="@color/base_edittext_hint_color" android:gravity="top" android:id="@id/edit_feedbackmessage" android:background="@drawable/base_edittext_drawable" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="70.0dip" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip" android:text="" android:hint="@string/feedback_edittext_hint" android:singleLine="false" android:maxLength="500" android:shadowColor="@null" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="5.0dip">
            <com.netease.nr.base.view.MyEditText android:textSize="16.0sp" android:textColorHint="@color/base_edittext_hint_color" android:id="@id/feedback_email" android:background="@drawable/base_edittext_drawable" android:paddingLeft="90.0dip" android:saveEnabled="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/feedback_email_hint" android:layout_centerVertical="true" android:inputType="textEmailAddress" />
            <com.netease.nr.base.view.MyTextView android:textSize="16.0sp" android:textColor="@color/base_black" android:gravity="center_vertical" android:id="@id/feedback_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/feedback_email_title" android:layout_alignLeft="@id/feedback_email" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <com.netease.nr.base.view.MyButton android:textAppearance="@style/biz_pc_profile_account_login_style" android:textColor="#ffffffff" android:id="@id/do_feedback_button" android:background="@drawable/biz_pc_account_login_btn_selector" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/feedback_button_text" />
    </LinearLayout>
</LinearLayout>