<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/base_tip_bg" android:layout_width="fill_parent" android:layout_height="wrap_content"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <com.netease.nr.base.view.MyTextView android:textSize="22.0sp" android:textColor="#ffe2e3e3" android:gravity="center" android:id="@id/version_dialog_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" />
        <com.netease.nr.base.view.MyTextView android:textSize="18.0sp" android:textColor="#ffe2e3e3" android:gravity="left" android:id="@id/version_dialog_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="20.0dip" />
        <CheckBox android:textColor="#ff7a7a7a" android:id="@id/n_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:button="@drawable/biz_ad_checkbox_selector" android:text="@string/biz_ad_no_tip" />
        <ImageView android:background="@drawable/biz_pc_viersion_line" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" />
        <LinearLayout android:gravity="center" android:id="@id/version_dialog_btn_zone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.netease.nr.base.view.MyButton android:textAppearance="@style/base_tip_btn_style" android:textColor="#ffb6b6b5" android:id="@id/n_cancel" android:background="@drawable/base_tip_btn_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip" android:text="@string/cancel" android:layout_weight="1.0" />
            <ImageView android:background="@drawable/biz_pc_version_split" android:layout_width="wrap_content" android:layout_height="fill_parent" />
            <com.netease.nr.base.view.MyButton android:textAppearance="@style/base_tip_btn_style" android:textColor="#ffeaeaea" android:id="@id/n_udpate" android:background="@drawable/base_tip_btn_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip" android:text="@string/biz_ad_update" android:layout_weight="1.0" />
            <com.netease.nr.base.view.MyButton android:textAppearance="@style/base_tip_btn_style" android:textColor="#ffeaeaea" android:id="@id/n_ok" android:background="@drawable/base_tip_btn_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip" android:text="@string/confirm" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>